--- a/Assignment 13 - Group Project submission/src/index.html
+++ b/Assignment 13 - Group Project submission/src/index.html
@@ -7,23 +7,22 @@
 <body>
 <img src="amazon.png">
 <div class="signup-form">
-
     <h1> Create your account</h1>
-    <form>
-        <input type="name" class="input-box" placeholder="Your name">
-        <input type="email" class="input-box" placeholder="E-mail">
-        <input type="password" class="input-box" placeholder="Password">
+
+    <section>
+        <input type="text" class="input-box" placeholder="Your name">
+        <input type="text" class="input-box" placeholder="E-mail">
         <label> Passwords must be at least 6 characters. </label>
-        <input type="password" class="input-box" placeholder="Re-enter password">
+        <input type="password" class="input-box" placeholder="Password"><br>
+        <input type="password" class="input-box" placeholder="Re-enter Password"><br>
         <p><span><input type="checkbox"></span> By checking this box, you would agree to the
             <a href="#"> Conditions of Use</a> and <a href="#"> Privacy Notice</a>.</p>
         <button type="button" class="signup-btn">Sign up</button>
         <hr>
-        <p>Already have an account? <a href="#"> Sign in</a> </p>
-                <!--<button type="button" class="signin-btn">Sign in</button> -->
-    </form>
-</div>
+        <p>Already have an account? <a href="#"> Sign in</a></p>
+        <!--<button type="button" class="signin-btn">Sign in</button> -->
+    </section>
 
-
+    </div>
 </body>
 </html>
