--- a/Assignment 13 - Group Project submission/src/index.html
+++ b/Assignment 13 - Group Project submission/src/index.html
@@ -13,7 +13,7 @@
 
         <input type="text" class="input-box" placeholder="Your name" required>
         <input type="text" class="input-box" placeholder="E-mail" required>
-        <input type="password" class="input-box" id="userInput" required autocomplete="off"
+        <input type="password" class="input-box" id="userInput" required autocomplete="off" minlength="6"
                placeholder="Password"><br>
         <label> Passwords must be at least 6 characters. </label> <br>
         <br>
